--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/three": "^9.4.4",
     "@react-three/drei": "^8.20.0",
     "@react-three/fiber": "^7.0.26",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "aphrodite": "^2.4.0",
+    "drei": "^2.2.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-tooltip": "^4.2.21",
     "three": "^0.139.0",
     "web-vitals": "^2.1.4"
   },
