--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@juggle/resize-observer": "^3.3.1",
     "@react-spring/three": "^9.4.4",
+    "@react-three/a11y": "^2.2.3",
     "@react-three/drei": "^8.20.0",
     "@react-three/fiber": "^7.0.26",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "aphrodite": "^2.4.0",
+    "caroumesh": "^1.1.5",
     "drei": "^2.2.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,6 +21,7 @@
     "react-tooltip": "^4.2.21",
     "three": "^0.139.0",
     "troika-three-text": "^0.46.4",
+    "valtio": "^1.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
